added few tabs (not finished)

--- a/index.html
+++ b/index.html
@@ -287,6 +287,237 @@
                       </div>
                     </div>
                 </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Evidence systémů</p>
+                            <p class="subheading">Evidujte systémy, v kterých máte osobní data. Určete technické zabezpečení a úložiště,na kterém se data nacházejí. V případě služby (SaaS) určete společnost,která vám ji poskytuje.</p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseTwo">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTwo">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Evidence zabezpečených úložišť OÚ</p>
+                            <p class="subheading">Určete zabezpečená úložiště, na kterých máte osobní údaje a na kterých se smějí vyskytovat. Přiřaďte jim fyzické a technické zabezpečení.</p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseThree">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseThree">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Uzly</p>
+                            <p class="subheading">Evidujte místa (uzly), kde se vyskytují fyzické dokumenty obsahující OÚ. Určete jejich fyzické zabezpečení.</p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseFour">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseFour">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Externí organizace</p>
+                            <p class="subheading">Identifikujte externí organizace, s kterými si vyměňujete data nebo vám poskytují služby týkající se OÚ.</p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseFive">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseFive">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Průvodce přidáním účelů</p>
+                            <p class="subheading">Systém obsahuje více jak 75 typizovaných účelů včetně doplněné legislativy a typů subjektů OÚ. Stačí pouze vybrat účely a následně je upravit a přiřadit systémy, v kterých dané účely zpracováváte. </p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseSix">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseSix">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Reporty</p>
+                            <p class="subheading">Výstupy, jenž přesně potřebujete. Záznam o zpracování činnosti, datový inventurní záznam, seznam úložišť, seznam externích organizací.</p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseSeven">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseSeven">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="collapse-card">
+                    <div class="row">
+                        <div class="col-8 col-md-6 collapse-card-text">
+                            <p class="heading">Podpora rolí</p>
+                            <p class="subheading">Systém podporuje následující role: <ul><li>DPO - odpovědná za ochranu osobních údajů v organizaci</li></ul></p>
+                        </div>
+                        <div class="col-2 col-md-5">
+                            <i class="fa fa-check-circle fa-2x circle-check"></i>
+                        </div>
+                        <div class="col-1 col-md-1">
+                            <a href="#" data-toggle="collapse" data-target="#collapseEight">
+                                <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseEight">keyboard_arrow_down</i>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                      <div class="card-body">
+                        <div class="images">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
                 
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red">
                     PŘEJÍT K OBJEDNÁVCE
