--- a/modal.html
+++ b/modal.html
@@ -72,7 +72,14 @@
                                 </form>
                             </div>
                             <div class="col-6">
-            
+                                <span>Objednavka Sluzeb:</span>
+
+                                <div class="type-of-product">
+                                    <p>Effit gdrp - pro stedni firmu
+
+                                    </p>
+                                    <a href="#">Zmenit</a>
+                                </div>
                             </div>
                         </div>
             
