added more tabs,but still not finished.

--- a/index.html
+++ b/index.html
@@ -489,7 +489,13 @@
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Podpora rolí</p>
-                            <p class="subheading">Systém podporuje následující role: <ul><li>DPO - odpovědná za ochranu osobních údajů v organizaci</li></ul></p>
+                            <p class="subheading">V systému jsou definovány role k dané organizaci.Uživatel může být přiřazen k více organizacím a přepínat si mezi nimi.Systém podporuje následující role:</p>
+                            <ul>
+                                <li>DPO - odpovědná za ochranu osobních údajů v organizaci</li>
+                                <li>Garant záznamu - odpovědná za konkrétní zpracování OÚ</li>
+                                <li>IT garant – odpovědná za Systémy</li>
+                                <li>Admin – změna uživatelů a jejich rolí</li>
+                            </ul>
                         </div>
                         <div class="col-2 col-md-5">
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
@@ -518,6 +524,72 @@
                       </div>
                     </div>
                 </div>
+                <div class="collapse-card">
+                        <div class="row">
+                            <div class="col-8 col-md-6 collapse-card-text">
+                                <p class="heading">Soulad s GDPR</p>
+                                <p class="subheading">Systém nabídne vytvoření dokumentu o souladu s GDPR dle aktuálního vyplnění Effitu. </p>
+                            </div>
+                            <div class="col-2 col-md-5">
+                                <i class="fa fa-check-circle fa-2x circle-check"></i>
+                            </div>
+                            <div class="col-1 col-md-1">
+                                <a href="#" data-toggle="collapse" data-target="#collapseNine">
+                                    <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseNine">keyboard_arrow_down</i>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
+                          <div class="card-body">
+                            <div class="images">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                    </div>
+                                    <div class="col-md-4">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                    </div>
+                                    <div class="col-md-4">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                    </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="collapse-card">
+                            <div class="row">
+                                <div class="col-8 col-md-6 collapse-card-text">
+                                    <p class="heading">Podpora procesu odpovědi</p>
+                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                </div>
+                                <div class="col-2 col-md-5">
+                                    <i class="fa fa-check-circle fa-2x circle-check"></i>
+                                </div>
+                                <div class="col-1 col-md-1">
+                                    <a href="#" data-toggle="collapse" data-target="#collapseTen">
+                                        <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTen">keyboard_arrow_down</i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#accordion">
+                              <div class="card-body">
+                                <div class="images">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                        </div>
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
                 
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red">
                     PŘEJÍT K OBJEDNÁVCE
