--- a/index.html
+++ b/index.html
@@ -711,14 +711,14 @@
                     </div>
                     <div class="modal-footer">
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-md-3">
                                 <img class="img-fluid effit-logo" src="assets/img/logo.png" alt="">
                             </div>
-                            <div class="col-3 bp-logo">
+                            <div class="col-md-3 bp-logo">
                                 <img class="img-fluid" src="assets/img/logo_2.png" alt="">
                             </div>
-                            <div class="col-2"></div>
-                            <div class="col-4">
+                            <div class="col-md-2"></div>
+                            <div class="col-md-4">
                                 <ul>
                                     <li><i class="fa fa-phone"></i>(+420) 725 949 433</li>
                                     <li><i class="fa fa-envelope"></i>obchod@bluepartners.cz</li>
