fixed 1st tab text

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Vedení datových inventurních záznamů</p>
-                            <p class="subheading">Identifikujte data obsahující osobní údaje. Definujte jim účel, kategorii subjektů...</p>
+                            <p class="subheading">Identifikujte účely zpracování osobních dat. Přiřaďte oblast, určete roli organizace, vyberte kategorie subjektů údajů, právní základ, výčet osobních údajů. Identifikujte fyzické dokumenty, kudy tyto dokumenty procházejí a v jakých systémech se nacházejí, odkud data získáváte a kam je předáváte.</p>
                         </div>
                         <div class="col-2 col-md-5">
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
