Made git grammar Nazi shiet

--- a/aboutgdpr.html
+++ b/aboutgdpr.html
@@ -73,7 +73,7 @@
             </div>
             <br>
             <p class="text1">
-                Další svévole bruselských byrokratù? Ne tak docela. GDPR nahradí tuzemský zákon č. 101/2000 Sb., o ochraně osobních údajů. Významně ovšem rozšíří definici osobních údajů a způsob nakládání s nimi. Komu není milé strkání cizích nosů do soukromých věcí, měl by jako občan iniciativu EU přivítat. V roli podnikatele asi budete projevovat menší nadšení.
+                Další svévole bruselských byrokratů? Ne tak docela. GDPR nahradí tuzemský zákon č. 101/2000 Sb., o ochraně osobních údajů. Významně ovšem rozšíří definici osobních údajů a způsob nakládání s nimi. Komu není milé strkání cizích nosů do soukromých věcí, měl by jako občan iniciativu EU přivítat. V roli podnikatele asi budete projevovat menší nadšení.
             </p>
             <p class="text2">
                 Osobním údajem jsou všechny informace, s jejichž pomocí dokážete identifikovat fyzickou osobu. Jde typicky o jméno, adresu, email, telefonní číslo, rodné číslo, adresu nebo zdravotní údaje. Zpracováním osobních dat je také shromažďování údajů o zaměstnancích nebo o zákaznících, např. provozem systému věrnostních karet.
