--- a/index.html
+++ b/index.html
@@ -542,6 +542,79 @@
                               </div>
                             </div>
                         </div>
+                        <div class="collapse-card">
+                            <div class="row">
+                                <div class="col-8 col-md-6 collapse-card-text">
+                                    <p class="heading">Riziková analýza</p>
+                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                </div>
+                                <div class="col-2 col-md-5">
+                                    <p class="preparing">Připravujeme</p>
+                                </div>
+                                <div class="col-1 col-md-1">
+                                    <a href="#" data-toggle="collapse" data-target="#collapseEleven">
+                                        <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseEleven">keyboard_arrow_down</i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div id="collapseEleven" class="collapse" aria-labelledby="headingEleven" data-parent="#accordion">
+                              <div class="card-body">
+                                <div class="images">
+                                    <div class="row">
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="collapse-card">
+                            <div class="row">
+                                <div class="col-8 col-md-6 collapse-card-text">
+                                    <p class="heading">Analýza DPIA</p>
+                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                </div>
+                                <div class="col-2 col-md-5">
+                                    <p class="preparing">Připravujeme</p>
+                                </div>
+                                <div class="col-1 col-md-1">
+                                    <a href="#" data-toggle="collapse" data-target="#collapseTwelve">
+                                        <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTwelve">keyboard_arrow_down</i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div id="collapseTwelve" class="collapse" aria-labelledby="headingTwelve" data-parent="#accordion">
+                              <div class="card-body">
+                                <div class="images">
+                                    <div class="row">
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="collapse-card">
+                            <div class="row">
+                                <div class="col-8 col-md-6 collapse-card-text">
+                                    <p class="heading">Školení v Elearningu</p>
+                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                </div>
+                                <div class="col-2 col-md-5">
+                                    <p class="preparing">Připravujeme</p>
+                                </div>
+                                <div class="col-1 col-md-1">
+                                    <a href="#" data-toggle="collapse" data-target="#collapseThirteen">
+                                        <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseThirteen">keyboard_arrow_down</i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div id="collapseThirteen" class="collapse" aria-labelledby="headingThirteen" data-parent="#accordion">
+                              <div class="card-body">
+                                <div class="images">
+                                    <div class="row">
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                        
                 
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red">
                     PŘEJÍT K OBJEDNÁVCE
