--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Riziková analýza</p>
-                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                    <p class="subheading"></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
@@ -570,7 +570,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Analýza DPIA</p>
-                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                    <p class="subheading"></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
@@ -594,7 +594,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Školení v Elearningu</p>
-                                    <p class="subheading">Identifikujte v systému primární a sekundární systémy, v kterých budete hledat subjekty žádající informace.</p>
+                                    <p class="subheading"></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
