js stop trolling omg

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                                 <span class="subheading">Objednávka služeb:</span>
                                 <hr>
                                 <div class="selected-product">
-                                    <span class="selected-text">Effit pro střední firmu</span><div class="change-wrapper"><div class="change">změnit</div></div>
+                                    <span class="selected-text">Effit pro střední firmu</span><div class="change-wrapper"><button class="mdl-button mdl-js-button change">změnit</button></div>
                                 </div>
                                 <span class="price">18 499 Kč / rok</span>
                                 <div class="card">
@@ -756,7 +756,7 @@
                                     </div>
                                 </div>
                                 <div class="selected-product">
-                                    <span class="selected-text">Směrnice</span><div class="change-wrapper"><div class="change">změnit</div></div>
+                                    <span class="selected-text">Směrnice</span><div class="change-wrapper"><button class="mdl-button mdl-js-button change">změnit</button></div>
                                 </div>
                                 <span class="pref">po domluvě</span>
                                 <hr>
